starting to remove mastercomfig framework

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,13 +1,13 @@
-exec comfig/define_presets.cfg
-preset=low
-exec overrides/pre_comfig.cfg
-exec comfig/comfig.cfg
-exec overrides/setup_hook.cfg
+preset=low // replace with fps cfg
+exec comfig/comfig.cfg // replace with alias
 preset
 exec comfig/addons.cfg
 modules_c
 run_modules
-exec comfig/echo.cfg
-exec overrides/autoexec.cfg
-exec app/autoexec.cfg
-exec comfig/finalize.cfg
+exec comfig/echo.cfg // logo
+exec PatchR/autoexec.cfg // autoexec for patchr
+
+// finalize.cfg
+mat_savechanges
+block_antialias
+dynamic_background
