--- a/cfg/comfig/comfig.cfg
+++ b/cfg/comfig/comfig.cfg
@@ -7,8 +7,6 @@ tf_mm_strict 2
 net_chokeloop 1
 cl_localnetworkbackdoor 0
 host_limitlocal 1
-
-// cmd
 alias demorestart"cmd demorestart"
 alias resetclass"cmd resetclass"
 alias menuopen"cmd menuopen"
@@ -30,48 +28,34 @@ alias nextmap"cmd nextmap"
 alias fade"cmd fade"
 alias ignoremsg"cmd ignoremsg"
 alias commentary_finishnode"cmd commentary_finishnode"
-
 alias interp_high interp_standard_high;alias interp_safe interp_standard_safe;alias interp_low interp_standard_low"
 cl_cmdrate 66
 cl_updaterate 66
-
 alias interp_standard_high"cl_interp .045;setinfo cl_interp .045"
 alias interp_standard_safe"cl_interp .03;setinfo cl_interp .03"
 alias interp_standard_low"cl_interp .015;setinfo cl_interp .015"
-
 alias snapshot_buffer_safe"cl_interp_ratio 2;setinfo cl_interp_ratio 2;interp_safe;alias snapshot_buffer_level echo snapshot_buffer=safe"
 alias snapshot_buffer_low"cl_interp_ratio 1;setinfo cl_interp_ratio 1;interp_low;alias snapshot_buffer_level echo snapshot_buffer_low"
-
 alias net_hitscan "snapshot_buffer_safe;cl_pred_optimize 2"
 alias net_projectiles "snapshot_buffer_low;cl_pred_optimize 2"
 alias net_spy "snapshot_buffer_safe;cl_pred_optimize 1"
-
 net_compresspackets 1
 net_compresspackets_minsize 200
-
 cl_interp_ratio 2
 setinfo cl_interp_ratio 2
 interp_safe
-
 net_maxroutable 1200
 net_maxfragments 1200
-
 net_maxcleartime 0
 net_splitpacket_maxrate 131072
-
 rate 131072
-
 net_maxfilesize 64
-
 tf_mm_debug_level 0
 sdr_spew_level 0
-
 r_rootlod 2
 r_lod -1
-
 mat_softwarelighting 0
 r_hunkalloclightmaps 0
-
 r_ambientboost 0
 r_lightaverage 0
 r_dynamic 0
@@ -83,25 +67,21 @@ mat_disable_lightwarp 1
 mat_reducefillrate 1
 r_rimlight 0
 r_pixelvisibility_partial 0
-
 mat_bumpmap 0
 mat_specular 0
 mat_phong 0
-
 r_shadowlod -2
 r_shadows 1
 r_shadowrendertotexture 0
 cl_blobbyshadows 0
 r_shadowmaxrendered 3
 nb_shadow_dist 0
-
 mat_supportflashlight 0
 r_flashlightculldepth 0
 r_flashlightdepthtexture 0
 r_flashlightmodels 0
 r_flashlightrender 0
 r_flashlightscissor 0
-
 tracer_extra 0
 r_drawtracers_firstperson 0
 cl_show_splashes 0
@@ -110,15 +90,12 @@ cl_muzzleflash_dlight_1st 0
 cl_drawmonitors 0
 muzzleflash_light 0
 cl_fasttempentcollision 1000000
-
 r_cheapwaterstart 0
 r_cheapwaterend 284
-
 r_WaterDrawReflection 0
 r_waterforceexpensive 0
 r_waterforcereflectentities 0
 r_WaterDrawRefraction 0
-
 tf_impactwatertimeenable 1
 fx_drawimpactdebris 0
 fx_drawimpactdust 0
@@ -128,7 +105,6 @@ tf_particles_disable_weather 1
 mat_reduceparticles 1
 r_drawflecks 0
 cl_particle_retire_cost 0
-
 mat_postprocess_x 1
 mat_hdr_level 0
 mat_colorcorrection 0
@@ -137,22 +113,16 @@ r_bloomtintr .333
 r_bloomtintg .333
 r_bloomtintb .333
 r_bloomtintexponent 1
-
 pyro_dof 0
 pyro_vignette 0
-
 tf_romevision_opt_in 0
-
 mat_motion_blur_enabled 0
-
 mat_software_aa_strength 0
 mat_software_aa_strength_vgui 0
 mat_alphacoverage 0
 mat_antialias 1
-
 mat_forceaniso 1
 mat_trilinear 1
-
 r_flex 0
 flex_rules 0
 anim_3wayblend 0
@@ -165,37 +135,29 @@ blink_duration 0
 phonemefilter .001
 phonemedelay -30
 phonemesnap 0
-
 r_decals 1
 mp_decals 1
 r_decal_cover_count 10
 r_decal_overlap_area 1.1
 r_decal_overlap_count 10
 r_drawbatchdecals 0
-
 r_drawmodeldecals 0
-
 r_renderoverlayfragment 1
-
 cl_allowdownload 1
 cl_allowupload 1
 r_spray_lifetime 2
 cl_spraydisable 0
 tf_delete_temp_files 1
-
 cl_burninggibs 0
 props_break_max_pieces 0
 tf_playergib 0
-
 violence_hgibs 0
 violence_hblood 0
 violence_agibs 0
 violence_ablood 0
-
 r_drawdetailprops 1
 cl_detaildist 1400
 cl_detailfade 0
-
 r_decalstaticprops 0
 cl_phys_props_enable 0
 r_staticprop_lod -1
@@ -203,27 +165,20 @@ r_propsmaxdist 0
 lod_TransitionDist -1
 r_drawdetailprops 0
 cl_detaildist 1
-cl_detailfade 0"
-
+cl_detailfade 0
 cl_ragdoll_fade_time -1
 cl_ragdoll_forcefade 1
 cl_ragdoll_physics_enable 1
-cl_ragdoll_collide 0;
+cl_ragdoll_collide 0
 agdoll_sleepaftertime 0
-
 mat_viewportscale 1
 r_3dsky 0
-
 cl_jiggle_bone_framerate_cutoff 0
-
 tf_sheen_framerate 15
-
 tf_sheen_alpha_firstperson .5
-
 mat_filtertextures 1
 mat_picmip 2
 mat_disable_fancy_blending 1
-
 r_drawropes 0
 rope_rendersolid 0
 r_ropetranslucent 0
@@ -231,7 +186,6 @@ rope_smooth 0
 rope_subdiv 0
 rope_collide 0
 rope_wind_dist 0
-
 threadpool_affinity 0
 engine_no_focus_sleep 1
 r_occludeemaxarea 5
@@ -247,12 +201,9 @@ sv_logdownloadlist 0
 mat_forcehardwaresync 1
 mat_managedtextures 0
 mat_queue_mode -1
-
 mat_powersavingsmode 0
 fps_max 360
-
 mat_vsync 0
-
 gl_amd_occlusion_workaround 0
 tf_item_inspect_model_spin_rate 30
 tf_colorblindassist 1
@@ -263,59 +214,43 @@ scr_centertime 5
 hud_medichealtargetmarker 1
 tf_scoreboard_ping_as_text 1
 cl_hud_playerclass_use_playermodel 0
-
 tf_healthicon_height_offset 10
 tf_hud_target_id_offset 0
 tf_hud_target_id_alpha 255
-
 tf_hud_target_id_show_avatars 0
-
 tf_use_match_hud 1
-
 map_background preload_room;wait 10;disconnect
-
 cl_disablehtmlmotd 1
-
 hud_combattext_doesnt_block_overhead_text 1
 cl_mute_all_comms 1
 tf_chat_popup_hold_time 5
-
 hud_saytext_time 10
 cl_enable_text_chat 1
 cl_showtextmsg 1
-
 hud_deathnotice_time 5
-
 tf_time_loading_item_panels .0005
 tf_backpack_page_button_delay .25
-
 cl_hud_killstreak_display_alpha 255
 cl_hud_killstreak_display_time 2
-
 cl_notifications_max_num_visible 3
 cl_notifications_move_time .1
 cl_notifications_show_ingame 1
-
 hud_achievement_count 0
 hud_achievement_count_engineer 0
 hud_achievement_description 0
 hud_achievement_glowtime 0
 hud_achievement_tracker 0
-
 cl_mvm_wave_status_visible_during_wave 1
-
 cc_captiontrace 0
 net_graphsolid 1
 fov_desired 90
 glow_outline_effect_enable 0
 tf_enable_glows_after_respawn 0
 tf_spec_xray_disable 1
-
 lzma_persistent_buffer 1
 cl_always_flush_models 0
 filesystem_buffer_size 1
 filesystem_max_stdio_read 64
-
 tf_dingalingaling_repeat_delay .001
 snd_async_minsize 32768
 snd_mixahead .05
@@ -332,15 +267,12 @@ dsp_water 0
 dsp_spatial 0
 snd_defer_trace 1
 dsp_enhance_stereo 0
-
 voice_enable 1
 voice_modenable 1
 cmd VModEnable 1
-
 tf_quest_map_tuner_wobble_magnitude 0
 tf_item_inspect_model_auto_spin 0
 tf_dashboard_slide_time 0
-
 alias class_config_scout"exec PatchR/scout.cfg;exec app/scout.cfg"
 alias class_config_soldier"exec PatchR/soldier.cfg;exec app/soldier.cfg"
 alias class_config_pyro"exec PatchR/pyro.cfg;exec app/pyro.cfg"
@@ -350,13 +282,10 @@ alias class_config_engineer"exec PatchR/engineer.cfg;exec app/engineer.cfg"
 alias class_config_medic"exec PatchR/medic.cfg;exec app/medic.cfg"
 alias class_config_sniper"exec PatchR/sniper.cfg;exec app/sniper.cfg"
 alias class_config_spy"exec PatchR/spy.cfg;exec app/spy.cfg"
-
 alias game_overrides_c"exec PatchR/game_overrides.cfg;exec app/game_overrides.cfg"
 alias game_overrides_once_c
-
 alias block_antialias"alias mat_antialias block_antialias_echo"
 alias block_antialias_echo"echo This command is blocked to prevent a material system reload. If you want to change it, use the Anti-Aliasing module inside the modules.cfg file."
-
 alias apply_overrides"modules_c;run_modules;exec PatchR/autoexec.cfg"
 alias run_game_overrides"exec comfig/game_overrides.cfg"
 alias game_overrides_once"match_hud_once;game_overrides_once_c"
