notes for future

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,11 +1,10 @@
-preset=low // replace with fps cfg
+fps=on // make this an actual alias
 exec comfig/comfig.cfg // replace with alias
-preset
-exec comfig/addons.cfg
-modules_c
-run_modules
-exec comfig/echo.cfg // logo
-exec PatchR/autoexec.cfg // autoexec for patchr
+exec comfig/addons.cfg // rename to tweaks and add: null, wait crash preventer, quick unscope, remove scope etc
+alias empty"exec empty.cfg"
+exec PatchR/autoexec.cfg // autoexec for PatchR
+PatchR_Interface=on // make this an actual alias
+exec PatchR/PI.cfg // PatchR Interface
 
 // finalize.cfg
 mat_savechanges
